[package]
name = "rust-companion"
version = "0.1.0"
edition = "2021"
authors = ["Dudochkin Victor <dudockin.victor@gmail.com>"]
license = "GPLv3"
description = "Rust compilation companion via IPC and unix sockets."
homepage = "https://github.com/angular-rust/rust-companion"
repository = "https://github.com/angular-rust/rust-companion"
keywords = ["ipc", "unix-socket", "subprocess"]
readme = "README.md"
autoexamples = true

[package.metadata.docs.rs]
all-features = true

[features]
log = ["logging", "syslog"]
async = []

[dependencies]
libc = "0.2"
nix = "0.26"
which = "4.4"
serde = { version = "1.0", features = ["derive"] }
syn-serde = { version = "0.2", features = ["serde_json"] }
serde_json = "1.0"
simd-json = { version = "0.7", features = ["allow-non-simd"] }
bincode = { version = "1.3" }

bytes = { version = "1.4", features = ["serde"] }
dotenv = "0.15"
syslog = { version = "6.0", optional = true }
logging = {package = "log", version = "0.4", optional = true }
# tokio = { version = "1.8", features = ["macros", "rt", "rt-multi-thread", "process", "net"] }


# [[bin]]
# name = "proc"
# # required-features = ["serde", "bootstrap", "bootstrap-simple"]

# [[example]]
# name = "simple"
# # required-features = ["serde"]


