[package]
name = "rust-companion"
version = "0.1.0"
edition = "2021"
authors = ["Dudochkin Victor <dudockin.victor@gmail.com>"]
license = "MPL-2.0"
description = "Rust compilation companion via IPC and unix sockets."
homepage = "https://github.com/angular-rust/rust-companion"
repository = "https://github.com/angular-rust/rust-companion"
keywords = ["ipc", "unix-socket", "subprocess"]
readme = "README.md"
autoexamples = true

[lib]
name = "companion"

# [package.metadata.docs.rs]
# all-features = true

[features]
default = []
log = ["logging", "syslog"]

[dependencies]
libc = "0.2"
nix = "0.26"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
syslog = { version = "6.0", optional = true }
logging = {package = "log", version = "0.4", optional = true }
sysinfo = "0.28"


